Added more variety and commands

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -12,40 +12,218 @@ botSettings:
   avatarURL: "https://i.imgur.com/r0PPTDE.png"
   # URL attached to the header of the embed message.
   titleURL: "https://discord.gg/BwSuTdEGJ4"
+  # A symbol that represents commands for the bot
+  commandsChar: "$"
+  # Can commands be used by non-administrators?
+  commandAllowForUser: false
 # Text templates for various notifications and messages.
 translation:
+  # Translations for commands
+  commands:
+    # Translations for the command to get server information
+    serverInfo:
+      # Current date field name
+      dateField: "Дата:"
+      # Server operation field names
+      serverWorkTimeField: "Сервер работает:"
+      # Suffix to designate units of measurement for server work
+      serverWorkTimeValueSuffix: "мин."
+      # Description for message output
+      title:
+        - "Последние новости с сервера"
+        - "Самые горячие события на сервере"
+        - "Информация, которую вы ждали"
+        - "Свежие обновления и новости"
+        - "Секретные детали сервера"
+        - "Важные объявления и изменения"
+        - "Что нового на сервере?"
+        - "Секретные планы администрации"
+        - "Новости и обновления сервера"
+        - "События, которые стоит знать"
+      # Footer message
+      footer:
+        - "Мир процветает"
+        - "Сообщество растет каждый день"
+        - "Создавайте историю на сервере"
+        - "Присоединяйтесь к нашей семье"
+        - "Сервер живет вас ждет"
+        - "Развиваемся вместе с вами"
+        - "Создавайте историю вместе с нами"
+        - "Вас ждут множество сюрпризов"
+        - "Сервер - это ваше второе домов"
+        - "Присоединяйтесь и участвуйте в приключениях"
   # Text format for updating server information.
   topicText: "Текущие игроки: <CURRENT_PLAYER>/<MAX_PLAYER> | Сервер работает: <SERVER_WORK_TIME> мин. | Обновлено: <UPDATE_TIME>"
   # Header of the embed message.
   embedTitle: "xLorey | Project Zomboid"
   # Text of the notification about the death of the player.
-  playerDeath: "Игрок **<USERNAME>** погиб смертью храбрых"
+  playerDeath:
+    - "Игрок **<USERNAME>** погиб, сражаясь до последнего вздоха."
+    - "Великий воин **<USERNAME>** пал в бою, но его дух останется вечным."
+    - "Тень смерти настигла **<USERNAME>**. Покойся с миром, герой."
+    - "Легенды не умирают... Игрок **<USERNAME>** будет жить в наших сердцах."
+    - "Игрок **<USERNAME>** отправился в последнее путешествие за пределы мира."
+    - "Свет погас для **<USERNAME>**. Его подвиги будут вспоминаться вечно."
+    - "Игрок **<USERNAME>** закончил свой путь. Вечная слава герою!"
+    - "Небеса получили нового героя. **<USERNAME>**, мы никогда не забудем тебя."
+    - "Судьба была жестока к **<USERNAME>**, но его дух остается несокрушимым."
+    - "След в истории оставлен... Игрок **<USERNAME>** прошел свой путь до конца."
   # Text of the notification about the death of a player in PvP.
-  playerDeathPVP: "Игрок **<USERNAME>** погиб в смертельной схватке с **<ATTACKER>**"
+  playerDeathPVP:
+    - "Игрок **<USERNAME>** пал в легендарном бою с **<ATTACKER>**."
+    - "Эпическое противостояние! **<USERNAME>** был повержен в битве с **<ATTACKER>**."
+    - "В схватке титанов **<USERNAME>** проиграл бой **<ATTACKER>**."
+    - "Великий воин **<USERNAME>** упал в дуэли с **<ATTACKER>**. Их имена войдут в историю."
+    - "Встреча гладиаторов завершилась! **<USERNAME>** был побежден **<ATTACKER>**."
+    - "В битве за честь **<USERNAME>** погиб от руки **<ATTACKER>**."
+    - "Судьба решила! **<USERNAME>** не смог противостоять **<ATTACKER>** в смертельной дуэли."
+    - "Бой окончен! **<USERNAME>** уступил **<ATTACKER>** . Почет и уважение победителю!"
+    - "Кровавая битва завершена. **<USERNAME>** проиграл жизнь в поединке с **<ATTACKER>**."
+    - "Сражение легенд! **<USERNAME>** покинул арену, уступив **<ATTACKER>**."
   # Text in the footer of the death message.
-  deathFooter: "Соболезнуем :c"
+  deathFooter:
+    - "Соболезнуем :c"
+    - "Печально :("
+    - "Потеряли еще одного героя!"
+    - "Пусть его душа покоится в мире! <3"
+    - "Вечная память... :c"
+    - "Он ушел из этого мира!"
+    - "Легкой дороги на тот свет!"
+    - "Мы помним о нем!"
+    - "Скорбим вместе..."
+    - "Ушел от нас..."
   # Text of the notification about the player connecting to the server.
-  playerConnect: "Игрок **<USERNAME>** подключился к серверу"
+  playerConnect:
+    - "На горизонте появился герой! Игрок **<USERNAME>** теперь с нами."
+    - "Сканирование завершено. Игрок **<USERNAME>** успешно подключился."
+    - "Звездные врата открыты, Игрок **<USERNAME>** вступает в игру."
+    - "Эхо легенды! Игрок **<USERNAME>** присоединился к нам."
+    - "Приключение начинается! Игрок **<USERNAME>** теперь в игре."
+    - "Поднять мост! Игрок **<USERNAME>** пристыковался к серверу."
+    - "Внимание, новый игрок на борту! Приветствуем **<USERNAME>**."
+    - "Виртуальный мир расширился! Игрок **<USERNAME>** с нами."
+    - "Портал активирован, Игрок **<USERNAME>** присоединяется к приключению."
+    - "Игровой мир приветствует нового героя! Игрок **<USERNAME>** вошел в игру."
   # Text in the footer of the connection message.
-  connectFooter: "Добро пожаловать! <3"
+  connectFooter:
+    - "Добро пожаловать! <3"
+    - "Рады видеть тебя здесь!"
+    - "Приветствуем нового игрока!"
+    - "Добро пожаловать в наше сообщество!"
+    - "Начинай приключение с нами!"
+    - "Приятной игры!"
+    - "С тобой стало на одного больше!"
+    - "Добро пожаловать на сервер!"
+    - "Готовы начать? Поехали!"
+    - "Добро пожаловать в мир возможностей!"
   # Notification text when a player is disconnected from the server.
-  playerDisconnect: "Игрок **<USERNAME>** отключился от сервера"
+  playerDisconnect:
+    - "Игрок **<USERNAME>** мгновенно исчез! Куда он делся?"
+    - "Внимание! Игрок **<USERNAME>** только что покинул нас в неизвестном направлении."
+    - "Игрок **<USERNAME>** взял перерыв. Надеемся увидеть его снова."
+    - "Наступила тишина... Игрок **<USERNAME>** покинул игру."
+    - "Игрок **<USERNAME>** отключился. Возвращайся скорее!"
+    - "Игрок **<USERNAME>** решил отдохнуть. До скорой встречи в игре!"
+    - "Игрок **<USERNAME>** вышел на короткий перерыв. Ожидаем его возвращения."
+    - "Игрок **<USERNAME>** закрыл портал. Сессия окончена."
+    - "Игрок **<USERNAME>** отправился в путешествие вне сервера."
+    - "Игрок **<USERNAME>** покидает нас, но приключение продолжается!"
   # Text in the footer of the disconnection message.
-  disconnectFooter: "Возвращайся скорее! :c"
+  disconnectFooter:
+    - "Возвращайся скорее! :c"
+    - "Ждем твоего возвращения!"
+    - "Уходишь? Будем ждать тебя!"
+    - "Не забывай о нас!"
+    - "Скучать будем!"
+    - "Возвращайся, когда захочешь!"
+    - "До скорой встречи!"
+    - "Будем ждать твой возврат!"
+    - "Не прощаемся навсегда!"
+    - "До следующего раза! :)"
   # Text of the notification about a player being kicked from the server.
-  kickText: "Игрок **<USERNAME>** был выкинут с сервера по причине: **<REASON>**"
+  playerKick:
+    - "Непрошенный гость! Игрок **<USERNAME>** был кикнут по причине '**<REASON>**'."
+    - "Кто-то ушёл... **<USERNAME>** вышел наружу. Причина: '**<REASON>**'."
+    - "Дверь закрыта! Игрок **<USERNAME>** был кикнут. Причина: '**<REASON>**'."
+    - "Время для ухода... Игрок **<USERNAME>** покинул игру. Причина: '**<REASON>**'."
+    - "Выгоняем нежеланных! **<USERNAME>** был кикнут из игры. Причина: '**<REASON>**'."
+    - "Кикнут из рая! Игрок **<USERNAME>** ушёл. Причина: '**<REASON>**'."
+    - "Пора уходить! **<USERNAME>** был кикнут. Причина: '**<REASON>**'."
+    - "Терпения иссякло! Игрок **<USERNAME>** покинул сервер. Причина: '**<REASON>**'."
+    - "Кикнут вне зоны! **<USERNAME>** покинул игру. Причина: '**<REASON>**'."
+    - "Закрываем доступ! Игрок **<USERNAME>** был кикнут из сервера. Причина: '**<REASON>**'."
   # Text of the notification about blocking a player on the server.
-  banText: "Игрок **<USERNAME>** был заблокирован на сервере по причине: **<REASON>**"
+  playerBan:
+    - "Закон неумолим! Игрок **<USERNAME>** был заблокирован по причине '**<REASON>**'."
+    - "Волшебный щит справедливости! Игрок **<USERNAME>** отлучен от игры за '**<REASON>**'."
+    - "Порядок восстановлен! Игрок **<USERNAME>** получил бан за '**<REASON>**'."
+    - "Правила - это правила! **<USERNAME>** заблокирован по причине '**<REASON>**'."
+    - "Игровой мир говорит 'нет'! Игрок **<USERNAME>** забанен за '**<REASON>**'."
+    - "Безопасность превыше всего! Игрок **<USERNAME>** был заблокирован. Причина: '**<REASON>**'."
+    - "Нарушение порядка! Игрок **<USERNAME>** вышел из игры навсегда. Причина: '**<REASON>**'."
+    - "Справедливость восторжествовала! **<USERNAME>** получает бан. Причина: '**<REASON>**'."
+    - "На страже правил! Игрок **<USERNAME>** заблокирован по причине '**<REASON>**'."
+    - "Правила не обсуждаются! Игрок **<USERNAME>** забанен. Причина: '**<REASON>**'."
   # Text in the footer of the punishment message.
-  punishmentFooter: "Пожалуйста, не нарушайте правила сервера"
+  punishmentFooter:
+    - "Запомните, правила существуют не просто так"
+    - "Надеемся, это урок для вас"
+    - "Правила помогают нам соблюдать порядок"
+    - "Соблюдение правил делает наше сообщество лучше"
+    - "Мы верим в вашу способность учиться на ошибках"
+    - "Надеемся, что это был последний раз"
+    - "Соблюдение правил - залог гармонии на сервере"
+    - "Не нарушайте правила, и вам будет комфортно у нас"
+    - "Мы ценим честность и порядочность"
+    - "Соблюдайте правила, чтобы создать лучшее сообщество"
   # Message header when the server shuts down
-  shutdownServerTitle: "Наш сервер Project Zomboid был выключен. Скоро запустимся вновь!"
+  shutdownServerTitle:
+    - "Сервер был временно выключен на техническое обслуживание"
+    - "Плановое отключение сервера для обновления. Мы скоро вернемся!"
+    - "Сервер временно недоступен. Мы работаем над улучшениями."
+    - "Завершение работы сервера на несколько минут. Скоро вернемся!"
+    - "Извините за временные неудобства. Сервер в процессе обновления."
+    - "Сервер приостановлен на обновление. Мы вернемся в ближайшее время."
+    - "Временное отключение сервера для улучшений. Мы скоро вернемся!"
+    - "Сервер выключен для важных обновлений. Скоро снова будет доступен."
+    - "Мы не надолго отключились! Спасибо за ваше терпение!"
+    - "Спасибо за игру! Сервер снова включится совсем скоро."
   # Footer for messages when the server is shut down
-  shutdownServerFooter: "Плановое выключение, просим прощения! :c"
+  shutdownServerFooter:
+    - "Сервер временно недоступен. Приносим извинения за неудобства."
+    - "Время отключения сервера. Спасибо, что были с нами!"
+    - "Сервер завершает работу. До новых встреч!"
+    - "Плановое отключение сервера. Возвращайтесь скоро!"
+    - "Сервер выключается на обновление. Увидимся после!"
+    - "Спасибо за игру! До скорой встречи."
+    - "Время закрыть сервер. Надеемся, вам было весело."
+    - "Сервер закрывается на техническое обслуживание. Ждем вас снова!"
+    - "Приносим извинения, сервер временно недоступен."
+    - "Завершение работы сервера. Надеемся, вы хорошо провели время."
   # Message header when starting the server
-  initServerTitle: "Наш сервер Project Zomboid был успешно запущен! Скорее подключайтесь!"
+  initServerTitle:
+    - "Сервер успешно запущен! Добро пожаловать!"
+    - "Ждем вас на нашем сервере! Мы включились!"
+    - "Сервер готов к вашему приходу! Подключайтесь!"
+    - "Запуск сервера завершен. Добро пожаловать!"
+    - "Сервер готов к игре. Подключитесь и начнем!"
+    - "Мы рады сообщить, что сервер запущен!"
+    - "Добро пожаловать на сервер! Мы в сети!"
+    - "Сервер готов к действию. Подключайтесь и играйте!"
+    - "Приготовьтесь к игре! Сервер успешно запущен!"
+    - "Сервер включен и готов к вашим приключениям!"
   # Footer for messages when the server starts
-  initServerFooter: "Мы ждем только тебя! <3"
+  initServerFooter:
+    - "Присоединяйтесь и играйте с нами!"
+    - "Ждем только тебя! <3"
+    - "Сервер онлайн, ждем вас!"
+    - "Присоединяйтесь и веселитесь!"
+    - "Играй с нами сейчас!"
+    - "Готовы начать приключение?"
+    - "Присоединяйтесь и исследуйте мир!"
+    - "Сервер готов к игре!"
+    - "Присоединяйтесь и создайте историю!"
+    - "Вас ждут увлекательные приключения!"
   # Field name for the server name
   fieldServerName: "Название сервера:"
   # The value of the server name field
@@ -66,4 +244,3 @@ translation:
   fieldPORTValue: "16261"
   # Format of messages from Discord to server chat
   chatFromDiscord: "<RGB:0.345,0.396,0.949> [Discord] <SPACE_SYMBOL> <RGB:1,1,1> <USERNAME>: <TEXT>"
-
